--- a/JogoDesafio/package.json
+++ b/JogoDesafio/package.json
@@ -19,7 +19,9 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "howler": "^2.2.3",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-sound": "^0.6.0"
   }
 }
